Fixed mobile layout bug

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -59,7 +59,7 @@ nav > a {
         min-height: 40vh;
     }
 
-    .blog-post-preview > a.blog-post-link {
+    .blog-post-preview > .blog-post-link {
         margin: 15px 0 50px 0;
         padding: 15px;
         width: 90%;
@@ -165,6 +165,7 @@ nav > a {
         padding: 15px;
         max-width: 90%;
     }
+
 }
 
 
